syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
  string model = 1;
  repeated Message messages = 2;
}

message ChatResponse {
  string ack_message = 1;
}

message Message {
  string role = 1;
  string content = 2;
}

option go_package = ".";